--- a/app.json
+++ b/app.json
@@ -1,8 +1,7 @@
 {
   "pages": [
     "pages/index/index",
-    "pages/logs/logs",
-    "pages/nnn/as"
+    "pages/logs/logs"
   ],
   "window": {
     "backgroundTextStyle": "light",
